force-app/main/default/objects/Pago_Interes__c/Pago_Interes__c.object-meta.xml
<CustomObject>
    <description>Este objeto es para guardar la informacion de la tabla Pago de intereses. 
En el que se genera un caso en el que alguien  va a registrar a un cliente y otra persona va a aprobar dicho pago.
pantallas que lo utilizan VF_AprobacionPagoInteres y VFinteres_administrativa</description>
    <label>Pago_Interes</label>
    <nameField>
        <label>Nombre de Pago_Interes</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pago_Intereses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>