force-app/main/default/objects/Pago_Interes__c/fields/Ajuste__c.field-meta.xml
<CustomField>
    <fullName>Ajuste__c</fullName>
    <description>Ajuste: Campo de control con respecto al monto de pago</description>
    <inlineHelpText>Ajuste: Campo de control con respecto al monto de pago</inlineHelpText>
    <label>Ajuste</label>
    <length>15</length>
    <type>Text</type>
</CustomField>