force-app/main/default/objects/Pago_Interes__c/fields/Banco__c.field-meta.xml
<CustomField>
    <fullName>Banco__c</fullName>
    <description>Nombre del banco por el cual se realizara el pago</description>
    <inlineHelpText>Nombre del banco por el cual se realizara el pago</inlineHelpText>
    <label>Banco</label>
    <length>50</length>
    <type>Text</type>
</CustomField>