force-app/main/default/objects/Pago_Interes__c/fields/CantidadPignorada__c.field-meta.xml
<CustomField>
    <fullName>CantidadPignorada__c</fullName>
    <description>Cantidad Pignorada en caso que se le halla dado algun prestamo</description>
    <inlineHelpText>Cantidad Pignorada en caso que se le halla dado algun prestamo</inlineHelpText>
    <label>CantidadPignorada</label>
    <length>15</length>
    <type>Text</type>
</CustomField>