force-app/main/default/objects/Pago_Interes__c/fields/CausaDescripcion__c.field-meta.xml
<CustomField>
    <fullName>CausaDescripcion__c</fullName>
    <description>descripcion de la causa de la cuenta</description>
    <inlineHelpText>descripcion de la causa de la cuenta</inlineHelpText>
    <label>CausaDescripcion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>