force-app/main/default/objects/Pago_Interes__c/fields/cuenta__c.field-meta.xml
<CustomField>
    <fullName>cuenta__c</fullName>
    <description>Cod de cuenta del cliente</description>
    <inlineHelpText>Este campo es para identificar al cliente en la base</inlineHelpText>
    <label>cuenta</label>
    <length>10</length>
    <type>Text</type>
</CustomField>