force-app/main/default/objects/Pago_Interes__c/fields/Diadepago__c.field-meta.xml
<CustomField>
    <fullName>Diadepago__c</fullName>
    <description>Dia que se le va a realizar el desembolso</description>
    <inlineHelpText>Dia que se le va a realizar el desembolso</inlineHelpText>
    <label>Diadepago</label>
    <length>5</length>
    <type>Text</type>
</CustomField>