force-app/main/default/objects/Pago_Interes__c/fields/Estadoaprobacion__c.field-meta.xml
<CustomField>
    <fullName>Estadoaprobacion__c</fullName>
    <description>ESTADO APROBACIÓN: estado en el que se encuentra el proceso del pago</description>
    <inlineHelpText>ESTADO APROBACIÓN: estado en el que se encuentra el proceso del pago</inlineHelpText>
    <label>Estadoaprobacion</label>
    <length>10</length>
    <type>Text</type>
</CustomField>