force-app/main/default/objects/Pago_Interes__c/fields/EstadoCuenta__c.field-meta.xml
<CustomField>
    <fullName>EstadoCuenta__c</fullName>
    <description>Estado Cuenta si esta activa o no</description>
    <inlineHelpText>Estado Cuenta si esta activa o no</inlineHelpText>
    <label>EstadoCuenta</label>
    <length>10</length>
    <type>Text</type>
</CustomField>