force-app/main/default/objects/Pago_Interes__c/fields/Fecha_Modificacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Modificacion__c</fullName>
    <description>Fecha de modificación del campo de registro</description>
    <inlineHelpText>Fecha de modificación del campo de registro</inlineHelpText>
    <label>Fecha Modificacion</label>
    <type>DateTime</type>
</CustomField>