force-app/main/default/objects/Pago_Interes__c/fields/fechadeRegistro__c.field-meta.xml
<CustomField>
    <fullName>fechadeRegistro__c</fullName>
    <description>fecha en que se Registró</description>
    <inlineHelpText>fecha en que se Registró</inlineHelpText>
    <label>fechadeRegistro</label>
    <type>DateTime</type>
</CustomField>