force-app/main/default/objects/Pago_Interes__c/fields/Formadepago__c.field-meta.xml
<CustomField>
    <fullName>Formadepago__c</fullName>
    <description>Forma en que el cliente recibira su pago</description>
    <inlineHelpText>Forma en que el cliente recibira su pago(cheque,efectivo...)</inlineHelpText>
    <label>Formadepago</label>
    <length>25</length>
    <type>Text</type>
</CustomField>