force-app/main/default/objects/Pago_Interes__c/fields/Id_pagointeres__c.field-meta.xml
<CustomField>
    <fullName>Id_pagointeres__c</fullName>
    <description>ID_PAGOINTERES llave primaria de la base pagodeinteres</description>
    <inlineHelpText>ID_PAGOINTERES llave primaria de la base pagodeinteres</inlineHelpText>
    <label>Id_pagointeres</label>
    <length>15</length>
    <type>Text</type>
</CustomField>