force-app/main/default/objects/Pago_Interes__c/fields/Identidad__c.field-meta.xml
<CustomField>
    <fullName>Identidad__c</fullName>
    <description>Numero de Identidad del cliente</description>
    <inlineHelpText>Numero de Identidad del cliente</inlineHelpText>
    <label>Identidad</label>
    <length>15</length>
    <type>Text</type>
</CustomField>