force-app/main/default/objects/Pago_Interes__c/fields/Moneda__c.field-meta.xml
<CustomField>
    <fullName>Moneda__c</fullName>
    <description>Moneda en la que se le pagara(L/$)</description>
    <inlineHelpText>Moneda en la que se le pagara(L/$)</inlineHelpText>
    <label>Moneda</label>
    <length>15</length>
    <type>Text</type>
</CustomField>