force-app/main/default/objects/Pago_Interes__c/fields/Montodepago__c.field-meta.xml
<CustomField>
    <fullName>Montodepago__c</fullName>
    <description>Monto de pago: cantidad que se le va a pagar al cliente</description>
    <inlineHelpText>Monto de pago: cantidad que se le va a pagar al cliente puede ser fijo o calculado</inlineHelpText>
    <label>Montodepago</label>
    <length>15</length>
    <type>Text</type>
</CustomField>