force-app/main/default/objects/Pago_Interes__c/fields/NoCuenta__c.field-meta.xml
<CustomField>
    <fullName>NoCuenta__c</fullName>
    <description>Numero de cuenta en el que se realizara el deposito</description>
    <inlineHelpText>Numero de cuenta en el que se realizara el deposito</inlineHelpText>
    <label>NoCuenta</label>
    <length>15</length>
    <type>Text</type>
</CustomField>