force-app/main/default/objects/Pago_Interes__c/fields/NombreCompleto__c.field-meta.xml
<CustomField>
    <fullName>NombreCompleto__c</fullName>
    <description>Nombre del cliente</description>
    <inlineHelpText>Nombre del cliente en la base</inlineHelpText>
    <label>NombreCompleto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>