force-app/main/default/objects/Pago_Interes__c/fields/TipodeCuenta__c.field-meta.xml
<CustomField>
    <fullName>TipodeCuenta__c</fullName>
    <description>Tipo de Cuenta(cheque/ahorro)</description>
    <inlineHelpText>Tipo de Cuenta(cheque/ahorro)</inlineHelpText>
    <label>TipodeCuenta</label>
    <length>25</length>
    <type>Text</type>
</CustomField>