force-app/main/default/objects/Pago_Interes__c/fields/Tipodepago__c.field-meta.xml
<CustomField>
    <fullName>Tipodepago__c</fullName>
    <description>tipo de saldo de la cuenta</description>
    <inlineHelpText>tipo de saldo de la cuenta(10,11,12,13)</inlineHelpText>
    <label>Tipodepago</label>
    <length>10</length>
    <type>Text</type>
</CustomField>