force-app/main/default/objects/Pago_Interes__c/fields/TipoFondo__c.field-meta.xml
<CustomField>
    <fullName>TipoFondo__c</fullName>
    <description>tipo de fondo al que hace las aportaciones</description>
    <inlineHelpText>tipo de fondo al que hace las aportaciones</inlineHelpText>
    <label>TipoFondo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>