force-app/main/default/objects/Pago_Interes__c/fields/TotalFondo__c.field-meta.xml
<CustomField>
    <fullName>TotalFondo__c</fullName>
    <description>Tota del Fondo</description>
    <inlineHelpText>Tota del Fondo</inlineHelpText>
    <label>TotalFondo</label>
    <length>15</length>
    <type>Text</type>
</CustomField>