force-app/main/default/objects/Pago_Interes__c/validationRules/isBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>isBlank</fullName>
    <active>true</active>
    <description>Verificar si es null</description>
    <errorConditionFormula>ISBLANK(Id_pagointeres__c )</errorConditionFormula>
    <errorMessage>Campo es null</errorMessage>
</ValidationRule>