force-app/main/default/objects/Pago_Interes__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Id_pagointeres__c</columns>
    <columns>NoCuenta__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>